# manager_pepper

./: :wq  CMakeLists.txt  Dockerfile  README.md  jarp.properties  package.xml  ros_entrypoint.sh
.github/workflows/: main.yml
demo_pnp/: CMakeLists.txt
demo_pnp/plans/: carry_my_luggage.er  carry_my_luggage.pnml  demoplan.pnml  plan_test_ros.pnml  plan_test_ros_vision.pnml
demo_pnp/src/: DemoActions.cpp  DemoPNPAS.cpp
include/: FileWatch.hpp  ManagerUtils.hpp  SQLiteUtils.hpp  manager_utils.hpp  manipulation_utils.hpp  sqlite_utils.hpp  vision_utils.hpp
include/DatabaseModel/: Database.hpp  DialogModel.hpp  GPSRActionsModel.hpp  InitModel.hpp  NavigationModel.hpp  VisionModel.hpp
include/GenericActions/: DialogGenericActions.hpp  GestureGenericActions.hpp  ManipulationGenericActions.hpp  NavigationGenericActions.hpp  OtherGenericActions.hpp  VisionGenericActions.hpp
include/PlanHighLevelActions/: DialogPlanActions.hpp  GesturePlanActions.hpp  InitiailisationPlanActions.hpp  ManipulationPlanActions.hpp  NavigationPlanActions.hpp  OtherPlanActions.hpp  VisionPlanActions.hpp
include/database_model/: color_model.hpp  database.hpp  database_utils.hpp  dialog_model.hpp  gpsr_actions_model.hpp  init_model.hpp  location_model.hpp  navigation_model.hpp  object_model.hpp  person_model.hpp  room_model.hpp  speech_model.hpp  sqlite_wrapper.hpp  stickler_model.hpp  vision_model.hpp
include/generic_actions/: dialog_generic_actions.hpp  gesture_generic_actions.hpp  manipulation_generic_actions.hpp  navigation_generic_actions.hpp  other_generic_actions.hpp  vision_generic_actions.hpp
include/plan_high_level_actions/: dialog_plan_actions.hpp  gesture_plan_actions.hpp  initialisation_plan_actions.hpp  manipulation_plan_actions.hpp  navigation_plan_actions.hpp  (+2 more)
launch/: robobreizh_manager.launch  robobreizh_manager2.launch
manager_db/: droptable.sql  populate.sql  queries.sql  roboBreizhDb.db  roboBreizhDb.db-shm  roboBreizhDb.db-wal  roboBreizhDb.sql
msg/: location.msg
plans/: CarryMyLuggage.pnml  CleanTheTable.pnml  DebugReceptionistV5.pnml  Farewell.pnml  FindMyMate.pnml  GPSR.pnml  GPSRInstruction.pnml  GPSRLobby.pnml  GPSRLobby_extended.pnml  GPSRSubEscortHuman.pnml  GPSRSubFindHuman.pnml  GPSRSubFindObject.pnml  GPSRSubFollowHuman.pnml  GPSRSubGreet.pnml  GPSRSubGuide.pnml  GPSRSubIntroduce.pnml  GPSRSubMoveTowards.pnml  GPSRSubShowMeCup.pnml  GPSRSubTakeObject.pnml  GPSRSubTell.pnml  GPSRTakeOrder.pnml  GPSR_test_give_me_cup.pnml  Receptionist.pnml  ReceptionistV2.pnml  ReceptionistV3.pnml  ReceptionistV4.pnml  ReceptionistV5.pnml  ReceptionistV6.pnml  Restaurant.pnml  ServeBreakfast.pnml  Stickler.pnml  SticklerForbiddenRoomFirstAttempt.pnml  SticklerForbiddenRoomSecondAttempt.pnml  SticklerForbiddenRoomSecondAttemptt.pnml  SticklerLobby.pnml  SticklerLobby2.pnml  SticklerNoDrinkFirstAttempt.pnml  SticklerNoDrinkSecondAttempt.pnml  SticklerShoes.pnml  SticklerShoesFirstAttempt.pnml  (+15 more)
src/: DatabaseModel.cpp  ManagerUtils.cpp  RoboBreizhManager.cpp  manager_utils.cpp  manipulation_utils.cpp  ping.cpp  robobreizh_manager.cpp  vision_utils.cpp
srv/: ConfirmSentence.srv
(+178 files in other folders)
