<?xml version="1.0"?>
<package format="2">
  <name>manager_pepper</name>
  <version>0.0.1</version>
  <description>The manager_pepper package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="thomas.ung@protonmail.com">Thomas UNG</maintainer>


  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<build_depend>message_generation</build_depend>
	<depend>message_runtime</depend>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>libqi</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>warehouse_ros_sqlite</build_depend>
  <build_depend>naoqi_libqi</build_depend>
  <build_depend>naoqi_libqicore</build_depend>

  <exec_depend>naoqi_libqi</exec_depend>
  <exec_depend>naoqi_libqicore</exec_depend>
  <exec_depend>libqi</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>warehouse_ros</exec_depend>
  <exec_depend>warehouse_ros_sqlite</exec_depend>

  <!-- <depend>libqi</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>warehouse_ros</depend>
  <depend>warehouse_ros_sqlite</depend>
  <depend>naoqi_libqi</depend>
  <depend>naoqi_libqicore</depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

