<?xml version="1.0"?>
<package format="2">
  <name>manager_pepper</name>
  <version>0.0.1</version>
  <description>The manager_pepper package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="thomas.ung@protonmail.com">Thomas UNG</maintainer>


  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>libqi</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>warehouse_ros</depend>
  <depend>warehouse_ros_sqlite</depend>
  <depend>naoqi_libqi</depend>
  <depend>naoqi_libqicore</depend>
  <depend>robobreizh_msgs</depend>
  <depend>pnp_ros</depend>
  <depend>pnp_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

